# DTPatternRecognition

./: .buildinfo  .gitignore  .gitmodules  AGENT.md  CONTRIBUTING.md  CONTRIBUTORS  DEVELOPERS.md  README.md  benchmark_loading.py  concentrator.py  dtpr_io_ntuple.root  dump_to_json.py  filters.py  genindex.html  geometry.py  index.html  make_plots.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.py  testRun.py  test_output.root
.github/workflows/: CI.yml  sphinx.yml
DTSim/: CMakeLists.txt  CMakeLists.txt~  GNUmakefile  README.md  compileDTsim.sh  exampleDTSim.cc  gui.mac  init_vis.mac  plotter.mac  run1.mac  run2.mac  runShowers.mac  tsg_offscreen.mac  vis.mac
DTSim/include/: ActionInitialization.hh  Constants.hh  DetectorConstruction.hh  EventAction.hh  MagneticField.hh  PrimaryGeneratorAction.hh  RunAction.hh  SLCellParameterisation.hh  SuperLayerHit.hh  SuperLayerSD.hh
DTSim/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  MagneticField.cc  PrimaryGeneratorAction.cc  RunAction.cc  SLCellParameterisation.cc  SuperLayerHit.cc  SuperLayerSD.cc
_destrada_codes/: make_conf_plots.py  make_eff_plots.py  make_rate_plots.py  make_rate_plots_thrscan.py  make_shower_eff_plots.py
_modules/: index.html
_sources/: index.rst.txt
_sources/src/: command_line_interface.rst.txt  dump_events_guide.rst.txt  events_inspection.rst.txt  events_visualizer_gui.rst.txt  installation.rst.txt  matplotlib_plotting.rst.txt
_static/: run_config.yaml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs-backup/: index.rst
docs-backup/_static/: run_config.yaml
docs-backup/src/: command_line_interface.rst  events_inspection.rst  events_visualizer_gui.rst  installation.rst  matplotlib_plotting.rst
docs/_static/: run_config.yaml  testparticle.py
docs/examples/: programmatic-api.ipynb
docs/src/: histogram_filling.rst  installation.rst
dtpr/: __init__.py  cli.py
dtpr/analysis/: digis_fpga_dumper.py  dump_events.py  dump_events_v2.py  dumper.py  event_visualizer_2.py  events_visualizer.py  fill_histograms.py  inspect_event.py  inspect_events.py  merge-roots.py  merge_histos.py  plot_dt_chamber.py  plot_dt_chambers.py  run_events_visualizer.py  test_cli.py
dtpr/base/: __init__.py  config.py  enrichment.py  event.py  event_list.py  histos.py  io.py  ntuple.py  old_event.py  old_particle.py  particle.py  pipeline.py  schema.py
dtpr/particles/: __init__.py  _particle.py  digi.py  g4digi.py  gen_muon.py  ph2tp.py  segment.py  shower.py  simhit.py
dtpr/utils/: config.py  create_templates.py  dt_plot_functions.py  dumped_ntuple_reader.py  dumper.py  functions.py  genmuon_functions.py  histograms.py  histograms_base.py  inspectors.py  io.py  paths.py  preprocessors.py  root_plot_functions.py  segment_functions.py  selectors.py  shower_functions.py  tqdm.py
dtpr/yamls/: config_cli.yaml  histograms.yaml  pre_steps.yaml  (+1 more)
examples/: README.md  example.ipynb  histograms.py  preprocessors.py  run_analysis.sh
geometry/: DriftCell.py  MBstation.py  cmsdt.py  layer.py  station.py
objects/: DriftCell.py  Layer.py  MBstation.py  Muon.py
particles/: digis.py  gen_muon.py  ph2TriggerPrimitives.py  segment.py  shower.py
plotter/: plotter.py
src/: cli.py  command_line_interface.html  dump_events_guide.html  events_inspection.html  events_visualizer_gui.html  histogram_filling.html  installation.html  matplotlib_plotting.html
test/: README.md  make_conf_plots_g4.py  make_rate_plots.py  run_config.yaml  run_config_4isoplots.yaml  run_config_4visualizer.yaml  test.py
tests/: conftest.py  test_cli_integration.py  test_config.py  test_config_include.py  test_distributed.py  test_dumper.py  test_event.py  test_fill_histograms.py  test_functions_callable.py  test_functions_preprocessors.py  test_io.py  test_ntuple.py  test_particle.py  test_pipeline.py  test_schema.py
utils/: baseHistos.py  basePlotter.py  digi.py  functions.py  ntuple_reader.py  plot_dt.py  plot_funcs.py
ydana/: __init__.py  cli.py  config_cli.yaml
(+240 files in other folders)
