[project]
name = "ydana"
version = "0.1.0"
description = "YAML-Driven Dask-Awkward Ntuple Analyzer for declarative columnar workflows"
readme = "README.md"
authors = [
  { name = "Daniel Estrada", email = "destrada@cern.ch" }
]
maintainers = [
  { name = "Daniel Estrada", email = "destrada@cern.ch" }
]
documentation = "https://intrepid-hep.github.io/ydana"
requires-python = ">=3.9"

dependencies = [
    "awkward>=2.6",
    "coffea>=2024.3.0",
    "dask>=2024.1.0",
    "dask-awkward>=2024.1.0",
    "hist>=2.7",
    "numpy>=1.23,<2.0",
    "natsort>=8.4",
    "PyYAML>=5.4.1",
    "tqdm>=4.6",
    "uproot>=5.3",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxcontrib-mermaid",
]
dev = [
    "pytest",
  "ruff"
]

[project.scripts]
ydana = "ydana.cli:main"

[tool.setuptools.packages.find]
include = ["ydana*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"